# ducklive

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  DEPLOY.md  TODO.md
ducklive/: __init__.py  __main__.py  model_check.py
ducklive/client/: app.py  discover.py  receiver.py  virtual_cam.py  virtual_mic.py  webui.py
ducklive/client/static/css/: client.css
ducklive/client/static/js/: audio-worklet.js  client.js
ducklive/client/templates/: client.html
ducklive/common/: config.py  models.py  protocol.py
ducklive/dashboard/: api.py
ducklive/dashboard/static/css/: dashboard.css
ducklive/dashboard/static/js/: dashboard.js
ducklive/dashboard/templates/: dashboard.html
ducklive/server/: app.py  capture.py  discovery.py  face_swap.py  head_swap.py  stream.py  voice_change.py
